--- a/index.html
+++ b/index.html
@@ -408,72 +408,28 @@
         <section class="container" id="blogs">
             <div class="blogs-content">
                 <div class="main-title">
-                    <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
+                    <h2><span>Achievements</span><span class="bg-text">Highlights</span></h2>
                 </div>
                 <div class="blogs">
                     <div class="blog">
-                        <img src="img/port6.jpg" alt="">
+                        <img src="https://media.licdn.com/dms/image/v2/D5622AQGAFBQQwPm29A/feedshare-shrink_1280/B56ZjpBixLHUAs-/0/1756256154813?e=1763596800&v=beta&t=_q4ht5Tj1_ayBh62yieS-SI5vGM24raejWd6fvNh-e4" alt="">
                         <div class="blog-text">
                             <h4>
-                                How to Create Your Own Website
+                                Top 15 in JIS Celeb Edition 2025 — caffeine can achieve Victory!
                             </h4>
                             <p>
-                                Dreaming of your own online space?🌐✨<br>How do you craft a stunning website from scratch?
+                                Eco-Track stormed into Top 15, transforming humble waste reports into legendary triumph.
                             </p>
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog1.jpg" alt="">
+                        <img src="http://cdn.dribbble.com/userupload/21986677/file/original-a8291193a3ec5596b32f2850a692986b.gif" alt="">
                         <div class="blog-text">
                             <h4>
-                                How to Become an Expert in Web Design
+                                More achievements coming soon… this saga has just begun.
                             </h4>
                             <p>
-                                What does it take to turn pixels into poetry?<br>How does one master the art of web design beyond just code and color?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog2.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Become a Web Designer in 10 Days
-                            </h4>
-                            <p>
-                                Can you really become a web developer in just 10 days?What if a keyboard, curiosity, and caffeine are all you need?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog3.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Debbuging made easy with Web Inspector
-                            </h4>
-                            <p>
-                                Ever wondered how to spot and fix bugs in seconds?What if debugging felt like a superpower—thanks to Web Inspector?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port1.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Get started with Web Design and UI Design
-                            </h4>
-                            <p>
-                                Ready to turn ideas into stunning interfaces?What’s stopping you from diving into the world of Web and UI Design today?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port3.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                This is what you need to know about Web Design
-                            </h4>
-                            <p>
-                                Curious what makes a website truly wow?Ready to unlock the secrets behind stunning web design?
+                                Brace yourself for sequels; I’m sharpening my blade with unstoppable new projects.
                             </p>
                         </div>
                     </div>
